deployment/aws: Added cloudfront distribution
Now, complete quizzes can be played on the public internet.

An /api prefix was added on the non-frontend routes as an easy
way to split traffic between the two origins.
